updated README.md for docker-compose instructions